# strom

./: .dockerignore  .gitignore  .strom.toml.example  CHANGELOG-OSC.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPOSITOR_EDITOR.md  Cargo.toml  Dockerfile  Dockerfile.debian-backup  Dockerfile.osc  LICENSE-APACHE  LICENSE-MIT  MPEGTSMUX_CRASH_INVESTIGATION.md  README.md  REFACTORING_STATUS.md  SECURITY.md  TECHNICAL_DEBT.md  WHIP_WHEP_PROGRESS.md  claude.md  demo-mcp.sh  docker-compose.yml  install.sh  openapi.json  osc-entrypoint  test-mcp-api.sh  test-mcp-interactive.sh  test-mcp-server.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-gstcefsrc.yml  ci.yml  docker-publish-full.yml  docker-publish.yml  release-msi.yml  release.yml  sync-fork.yml  test-arm64-native.yml
assets/: ICONS.md
backend/: Cargo.toml  build.rs
backend/src/: affinity_manager.rs  assets.rs  auth.rs  config.rs  events.rs  gpu.rs  gui.rs  json_rejection.rs  layout.rs  lib.rs  main.rs  network.rs  openapi.rs  paths.rs  ptp_monitor.rs  rtsp_server.rs  state.rs  system_monitor.rs  thread_registry.rs  tls.rs  version.rs  whep_registry.rs  whip_registry.rs  whip_session_manager.rs
backend/src/api/: blocks.rs  discovery.rs  elements.rs  flows.rs  gst_launch.rs  mcp.rs  media.rs  mediaplayer.rs  mod.rs  network.rs  probes.rs  sdp_transform.rs  sse.rs  version.rs  vision_mixer_page.rs  websocket.rs  whep_player.rs  whip_ingest.rs
backend/src/blocks/: builder.rs  mod.rs  registry.rs  sdp.rs  storage.rs
backend/src/blocks/builtin/: aes67.rs  audioanalyzer.rs  audioformat.rs  audiogain.rs  audiorouter.rs  compositor.rs  decklink.rs  efpsrt.rs  efpsrt_input.rs  glcompositor.rs  inter.rs  latency.rs  loudness.rs  mediaplayer.rs  meter.rs  mixer.rs  mod.rs  mpegtssrt.rs  mpegtssrt_input.rs  ndi.rs  recorder.rs  spectrum.rs  thumbnail.rs  videoenc.rs  videoformat.rs  whep.rs  whip.rs
backend/src/blocks/builtin/mediaplayer/: bridge.rs  builder.rs  definition.rs  mod.rs  state.rs
backend/src/blocks/builtin/mixer/: builder.rs  definition.rs  elements.rs  metering.rs  mod.rs  properties.rs  tests.rs
backend/src/blocks/builtin/videoenc/: tests.rs
backend/src/blocks/builtin/vision_mixer/: builder.rs  definition.rs  elements.rs  layout.rs  mod.rs  overlay.rs  properties.rs  tests.rs
backend/src/discovery/: device.rs  mdns.rs  mod.rs  rtsp_client.rs  sap.rs  types.rs
backend/src/gst/: block_expansion.rs  buffer_age_probe.rs  discovery.rs  mod.rs  pipeline.rs  pipeline_monitor.rs  thread_priority.rs  thumbnail.rs  thumbnail_tap.rs  transitions.rs  video_frame.rs  whep_probe.rs
backend/src/gst/pipeline/: bus.rs  construction.rs  effects.rs  lifecycle.rs  linking.rs  mod.rs  properties.rs  state.rs  webrtc.rs
backend/src/mcp/: handler.rs  mod.rs  session.rs
backend/src/sharing/: channel_registry.rs  mod.rs
backend/src/stats/: collector.rs  mod.rs  rtp.rs
backend/src/storage/: json_storage.rs  mod.rs  postgres_storage.rs
backend/static/: dsk-breaking.html  dsk-lower-third.html  vision-mixer.html
backend/static/webrtc/: devices.js  webrtc.css  webrtc.js
backend/static/whep/: player.html  streams.html  whep.css  whep.js
backend/static/whip/: ingest.html  whip.css  whip.js
backend/tests/: api_tests.rs  jitterbuffer_mute_test.rs  openapi_snapshot.json  openapi_snapshot_test.rs  openapi_test.rs  pipeline_lifecycle_test.rs
docker/gstcefsrc/: .gitignore  Dockerfile
docker/strom/: entrypoint.sh
docker/strom-full/: Dockerfile  entrypoint.sh
docs/: AUTHENTICATION.md  BLOCKS_IMPLEMENTATION.md  CEF_SIGILL_CRASH.md  CHANGELOG.md  COMPOSITOR_EDITOR.md  CONTRIBUTING.md  CROSS_COMPILE_ARM64.md  DEBUGGING_SEGFAULTS_WSL2.md  DEVELOPMENT.md  DOCKER.md  FEATURE_ROADMAP.md  FEATURE_SUGGESTIONS.md  HTML_RENDER.md  INTEGRATION.md  MCP.md  MEDIAPLAYER_TEST_HARNESS.md  MIXER_BLOCK.md  MIXER_BLOCK_PLAN.md  MPEGTSMUX_DEADLOCK_FIX.md  OPENAPI_AUDIT_2026-03-16.md  PAD_TEMPLATE_CRASH_FIX.md  POSTGRESQL.md  PROGRESS.md  TODO.md  VIDEO_ENCODER_BLOCK.md  WHEP_OUTPUT_BLOCK.md  WHIP_ICE_DISCONNECT_INVESTIGATION.md  docker-gpu-setup.md  dsk-test-urls.md  openapi-audit-2026-03-16.md  segfaults-wsl2.md
docs/design/: aes67-discovery.md  app-navigation.md  video-thumbnail-block.md
examples/: test-glvideomixer.rs
frontend/: Cargo.toml  Trunk.toml  clippy.toml  index.html  manifest.json
frontend/src/: api.rs  app.rs  audioanalyzer.rs  audiorouter.rs  buffer_age.rs  clipboard.rs  clocks.rs  compositor_editor.rs  discovery.rs  graph.rs  info_page.rs  interactive_overlay.rs  latency.rs  lib.rs  links.rs  list_navigator.rs  login.rs  main.rs  media.rs  mediaplayer.rs  meter.rs  mixer.rs  palette.rs  properties.rs  ptp_monitor.rs  qos_monitor.rs  qr.rs  spectrum.rs  sse.rs  state.rs  system_monitor.rs  themes.rs  thread_monitor.rs  wasm_utils.rs  webrtc_stats.rs  ws.rs
frontend/src/api/: auth.rs  blocks.rs  compositor.rs  discovery.rs  elements.rs  flows.rs  gst_launch.rs  media.rs  mod.rs  player.rs  probes.rs  stats.rs
frontend/src/app/: block_thumbnails.rs  constructors.rs  data_loading.rs  dialogs.rs  flow_ops.rs  flow_selection.rs  import_export.rs  keyboard.rs  live_mode.rs  mod.rs  probe_ui.rs  rendering.rs  update.rs
frontend/src/compositor_editor/: api_sync.rs  canvas.rs  mod.rs  rendering.rs  templates.rs
frontend/src/graph/: data.rs  interaction.rs  mod.rs  rendering.rs
frontend/src/mixer/: api.rs  detail.rs  keyboard.rs  mod.rs  rendering.rs  state.rs  util.rs  widgets.rs
installer/windows/: Build-Installer.ps1  License.rtf  Prepare-GStreamer.ps1  Prepare-Graphviz.ps1  Product.wxs  README.md
mcp-server/: Cargo.toml  README.md
mcp-server/src/: client.rs  main.rs
scripts/: install-hooks.sh  pre-commit  setup-dev-windows.ps1
scripts/cross-compile/: README.md  build-arm64.sh  (+4 more)
types/: Cargo.toml
types/src/: api.rs  auth.rs  block.rs  discovery.rs  element.rs  events.rs  flow.rs  lib.rs  mediaplayer.rs  mixer.rs  network.rs  state.rs  stats.rs  system_monitor.rs  thread_stats.rs  vision_mixer.rs  whep.rs  whip.rs
(+15 files in other folders)
