[workspace]
resolver = "2"
members = ["types", "backend", "frontend", "mcp-server"]
default-members = ["backend"]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Per"]

[workspace.dependencies]
# Shared types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["serde", "v4", "js"] }

# Backend
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
gstreamer = "0.24.3"
gstreamer-app = "0.24.2"
gstreamer-net = "0.24.2"
gst-plugin-webrtc = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs", features = ["whep", "whip"], rev = "83625619" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Frontend
egui = "0.33"
eframe = { version = "0.33", features = ["default_fonts", "glow", "persistence"] }
reqwest = { version = "0.12", features = ["json"] }
gloo-net = { version = "0.6", features = ["websocket"] }
