[package]
name = "strom-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["gui"]
gui = ["dep:strom-frontend", "dep:eframe"]

[dependencies]
# Internal
strom-types = { path = "../types", features = ["openapi"] }

# Web framework
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# OpenAPI documentation
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# GStreamer
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-net.workspace = true
gst-plugin-webrtc.workspace = true

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"
async-trait = "0.1"

# Thread priority management
thread-priority = "3.0.0"
libc = "0.2"

# Authentication
bcrypt = "0.17.1"
tower-sessions = "0.14"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Cross-platform directory paths
directories = "6.0"

# Temporary files for DOT/SVG conversion
tempfile = "3.8"
uuid.workspace = true

# MIME type detection for static assets
mime_guess = "2.0"

# Embed static assets
rust-embed = "8.0"

# Optional GUI (native frontend)
strom-frontend = { path = "../frontend", optional = true }
eframe = { workspace = true, optional = true }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
