[package]
name = "strom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "strom"

[features]
default = ["nvidia"]
no-gui = []
nvidia = ["dep:nvml-wrapper"]

[dependencies]
# Internal
strom-types = { path = "../types", features = ["openapi"] }

# Web framework
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
futures.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time
chrono = "0.4"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
time.workspace = true

# OpenAPI documentation
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# GStreamer
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-net.workspace = true
# gst-plugin-webrtc.workspace = true
gst-plugin-webrtchttp.workspace = true
gst-plugin-inter.workspace = true

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }

# Thread priority management
thread-priority = "3.0.0"
libc = "0.2"

# Authentication
bcrypt = "0.17.1"
tower-sessions = "0.14"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration management
figment = { version = "0.10", features = ["toml", "env"] }

# Cross-platform directory paths
directories = "6.0"

# Temporary files for DOT/SVG conversion
tempfile = "3.8"
uuid.workspace = true

# MIME type detection for static assets
mime_guess = "2.0"

# Embed static assets (debug-embed forces embedding even in debug builds)
rust-embed = { version = "8.0", features = ["debug-embed"] }

# System monitoring
sysinfo = "0.37"
nvml-wrapper = { version = "0.11", optional = true }

# Network interface discovery
network-interface = "2.0"

# HTTP client for test harness
reqwest.workspace = true

# Terminal UI for test harness
crossterm = "0.29"

# SAP/AES67 discovery
socket2 = "0.6"      # Multicast socket options
flate2 = "1.0"       # Zlib decompression for SAP

# GUI (native frontend) - use --features no-gui to disable
strom-frontend = { path = "../frontend" }
eframe = { workspace = true }

[build-dependencies]
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3.0"

[[bin]]
name = "mediaplayer-test"
path = "src/bin/mediaplayer_test/main.rs"
