[package]
name = "strom-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal
strom-types = { path = "../types" }

# GUI - works on both WASM and native
egui.workspace = true
eframe.workspace = true

# HTTP client - works on both WASM and native
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async utilities
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Logging
tracing.workspace = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = { version = "0.3", features = ["Window", "EventSource", "MessageEvent", "Event", "Storage"] }
wasm-bindgen = "0.2"

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
