[package]
name = "strom-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal
strom-types = { path = "../types" }

# GUI - works on both WASM and native
egui.workspace = true
eframe.workspace = true

# HTTP client - works on both WASM and native
reqwest = { workspace = true, features = ["json", "multipart"] }

# Serialization
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Async utilities
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# URL encoding
urlencoding = "2.1"

# Logging
tracing.workspace = true

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Cross-platform time - needs wasm-bindgen feature for WASM
instant = { version = "0.1", features = ["wasm-bindgen"] }
gloo-net.workspace = true
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = { version = "0.3", features = ["Window", "EventSource", "MessageEvent", "Event", "Storage", "Document", "HtmlInputElement", "FileList", "File", "FileReader", "HtmlElement", "CssStyleDeclaration"] }
js-sys = "0.3"
wasm-bindgen = "0.2"

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Cross-platform time (standard for native)
instant = "0.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
