[package]
name = "strom-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client for calling Strom API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Shared types
strom-types = { path = "../types" }
