[package]
name = "strom-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP client for calling Strom API (use rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Shared types
strom-types = { path = "../types" }
