[package]
name = "strom-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
utoipa = { workspace = true, optional = true, features = ["uuid"] }

[features]
default = []
openapi = ["utoipa"]
